manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wadam
spec:
  selector:
    app: wadam
  ports:
  - port: 443
    targetPort: 3000
