manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wadam
  labels:
    app.kubernetes.io/name: wadam
spec:
  tls:
    - hosts:
        - wadam.bn256.dev
      secretName: wadam-tls
  rules:
    - host: wadam.bn256.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wadam
                port:
                  number: 80
